--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #000000;
+  --foreground: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -12,6 +12,7 @@
 
 html,
 body {
+  font-size: 10px;
   max-width: 100vw;
   overflow-x: hidden;
 }
